--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   "dependencies": {
     "gatsby": "^2.19.12",
     "gatsby-plugin-manifest": "^2.2.41",
+    "gatsby-plugin-netlify-cms": "^4.10.0",
     "gatsby-theme-amsterdam": "^1.0.5",
+    "netlify-cms-app": "^2.14.23",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
